Fix the default prompt to just report what was done

--- a/internal/llm/standup.prompt.yml
+++ b/internal/llm/standup.prompt.yml
@@ -10,15 +10,7 @@ messages:
 
       Your task is to create a concise, well-structured standup report that
       summarizes the developer's work from the previous day(s). The report
-      should be written in first person and include:
-
-
-      1. **Yesterday's Accomplishments**: What was completed/worked on
-
-      2. **Today's Plans**: Logical next steps based on the activity (be
-      realistic)
-
-      3. **Blockers/Challenges**: Any potential issues or dependencies mentioned
+      should include: what was completed/worked on.
 
 
       Guidelines:
@@ -36,7 +28,9 @@ messages:
 
       - Use bullet points for clarity
 
-      - Avoid technical jargon that non-developers wouldn't understand
+      - Make it understandable by a non-developer
+
+      - Avoid bullshit or filler content
 
 
       Format the output as a clean, readable report without any markdown
